[core] [SERVER-699]  Events overview, hide not visible events in overview, different colors for different sparklines [SERVER-702]Fixed design issue, implemented better solution for keeping user on page if changes not saved

--- a/frontend/express/public/stylesheets/main.css
+++ b/frontend/express/public/stylesheets/main.css
@@ -1033,7 +1033,7 @@ div.datatablesubrow {display: none;}
 #events-custom-settings table.events-table  tr:nth-child(even),#events-overview-table table.events-table tr:nth-child(even){ background-color:#F9F9F9}
 #events-custom-settings .event-row-placeholder, #events-overview-table .event-row-placeholder { height:40px; }
 #events-custom-settings .event-order,#events-overview-table .event-order { color:#BBB; cursor:move; }
-
+#events-overview-table tr.moving {}
 #edit-events-button { padding: 4px 1px; }
 #edit-events-button i { font-size: 23px; margin: 0; line-height: 16px; }
 
